--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,15 @@ Version: 0.1
 Date: 2013-10-02
 Author: Jason Law
 Maintainer: Jason Law <jason.law@portlandoregon.gov>
-Depends: randomForest, MASS, nnet
-Description: RIVPACS models are used to measure the ecological health of a stream or river using calibration data collected from referece sites
+Imports:
+    igraph,
+    ape,
+    randomForest,
+    nnet,
+    MASS,
+    plyr
+Description: RIVPACS models are used to measure the ecological health of a
+    stream or river using calibration data collected from referece sites
 License: GPL-2
 Encoding: UTF-8
+RoxygenNote: 7.2.1
